Add mores stopwords

--- a/session-2-1-data-preprocessing.ipynb
+++ b/session-2-1-data-preprocessing.ipynb
@@ -111,17 +111,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gin_stopwords = ['about', 'actually', 'agree', 'already', 'also', 'always',\n",
+    "gin_stopwords = ['about', 'actually', 'ago', 'agree', 'already', 'also', 'always',\n",
     "                 'am', 'because', 'bring', 'can', 'cannot', 'cant',\n",
     "                 'could', 'couldnt', 'did', 'didnt', 'different', 'dont',\n",
     "                 'eg', 'ei', 'etc', 'even', 'every', 'everywhere', 'example', 'feel', 'felt', 'get',\n",
-    "                 'go', 'good', 'hence', 'ie', 'im', 'important', \n",
-    "                 'know', 'like', 'make', 'may', 'maybe', 'need', 'not', 'often', 'oh', 'ok',\n",
-    "                 'one', 'put', 'quite', 'rather', 'really', 'say', 'singapore', 'something', 'su', 'space',\n",
-    "                 'still', 'th', 'that', 'thats', 'they', 'theyre', 'theyve',\n",
-    "                 'think', 'three', 'try', 'us', 'use', 've', 'wa', 'want', 'way', 'we',\n",
+    "                 'go', 'good', 'hence', 'however', 'ie', 'im', 'important', \n",
+    "                 'know', 'like', 'make', 'may', 'maybe', 'mid', 'need', 'no', 'not', 'often', 'oh', 'ok',\n",
+    "                 'one', 'per', 'pre', 'put', 'quite', 'rather', 'really', 'reduce', 'say', 'singapore', 'something', 'su', 'space',\n",
+    "                 'still', 'sum', 'th', 'that', 'thats', 'they', 'theyre', 'theyve',\n",
+    "                 'think', 'three', 'total', 'try', 'us', 'use', 've', 'via', 'wa', 'want', 'way', 'we',\n",
     "                 'well', 'were', 'weve', 'whatsoever', 'whether', 'wont',\n",
-    "                 'would', 'wouldnt', 'yall', 'yea', 'yeah', \n",
+    "                 'would', 'wouldnt', 'yall', 'yea', 'yeah', 'yes', 'yet',\n",
     "                 'youd', 'youll', 'youre', 'youve', 'yr']\n",
     "\n",
     "honorific_stopwords = ['mrs', 'mr', 'ms', 'miss', 'mdm', 'madam', 'mister', 'er', 'assoc', 'prof', 'dr', 'bg']\n",
@@ -129,9 +129,11 @@
     "number_stopwords = ['first', 'second', 'third', 'fourth', 'fifth', 'sixth', 'seventh', 'eighth', 'ninth', 'tenth', 'last', 'ii', 'iii', 'iv', 'vi', 'vii', 'viii', 'ix', 'one', 'two', 'three', 'four', 'five', 'six', 'seven', 'eight', 'nine', 'ten', 'eleven', 'twelve', 'thirteen', 'fourteen', 'fifteen', 'sixteen', 'seventeen', 'eighteen', 'nineteen', 'twenty', 'thirty', 'forty', 'fifty', 'sixty', 'seventy', 'eighty', 'ninety', 'hundred', 'thousand', 'million', 'billion', 'trillion']\n",
     "\n",
     "# \"ministry\" is a stopword because, if someone asks about ministry of education, then he's interested in education. so we dunnid the \"ministry\".\n",
-    "hansard_stopwords = ['speaker', 'leader', 'chairman', 'deputy', 'beg', 'permission', 'withdraw', 'cut', 'thank', 'member', 'honorable', 'question', 'clarification', 'grateful', 'year', 'month', 'day', 'many', 'ministry', 'minister', 'consider', 'take', 'ask', 'sir', 'maam', 'since', 'especially', 'reason', 'see', 'non', 'due', 'mention', 'respectively', 'respective', 'must', 'expect', 'mean', 'exist', 'cause']\n",
+    "hansard_stopwords = ['speaker', 'leader', 'chairman', 'chairwoman', 'chair', 'deputy', 'beg', 'permission', 'move', 'withdraw', 'allocate', 'head', 'cut', 'thank', 'member', 'honorable', 'question', 'clarification', 'grateful', 'year', 'month', 'day', 'reply', 'many', 'ministry', 'minister', 'consider', 'take', 'ask', 'sir', 'maam', 'since', 'especially', 'reason', 'see', 'non', 'due', 'mention', 'respectively', 'respective', 'must', 'expect', 'mean', 'exist', 'cause', 'hon']\n",
     "\n",
-    "add_stopwords = gin_stopwords + honorific_stopwords + hansard_stopwords + number_stopwords\n",
+    "adverb_stopwords = ['annually', 'currently', 'early', 'finally', 'firstly', 'fully', 'increasingly', 'likely', 'monthly', 'particularly', 'previously', 'secondly', 'specifically']\n",
+    "\n",
+    "add_stopwords = gin_stopwords + honorific_stopwords + hansard_stopwords + number_stopwords + adverb_stopwords\n",
     "stop_words.extend(add_stopwords)"
    ]
   },
