--- a/1_data_preprocessing.ipynb
+++ b/1_data_preprocessing.ipynb
@@ -1,22 +1,40 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "87c79560-be83-49ef-a88e-10c8a14f8b31",
+   "metadata": {},
+   "source": [
+    "Run this notebook first. Then run the topic modelling one.\n",
+    "\n",
+    "# 0. Setting up"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "5216dc8e-8e88-4590-8158-d78bf569fc72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "# if the imports don't work for some reason, use the line below to add your path\n",
+    "sys.path.extend(['D:\\\\Documents\\\\GitHub\\\\pq-analyzer\\\\env', 'D:\\\\Documents\\\\GitHub\\\\pq-analyzer\\\\env\\\\lib\\\\site-packages'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "bad09422",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "getting stopwords\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "D:\\Documents\\GitHub\\pq-analyzer\\env\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "[nltk_data] Downloading package wordnet to\n",
       "[nltk_data]     C:\\Users\\thisi\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n",
@@ -27,39 +45,40 @@
       "[nltk_data]     C:\\Users\\thisi\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getting stopwords\n"
+     ]
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.extend(['D:\\\\Documents\\\\GitHub\\\\pq-analyzer\\\\env', 'D:\\\\Documents\\\\GitHub\\\\pq-analyzer\\\\env\\\\lib\\\\site-packages'])\n",
-    "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import pickle\n",
     "from ast import literal_eval\n",
-    "\n",
     "from pdb import set_trace as st\n",
+    "import pickle\n",
     "import string\n",
-    "import re\n",
-    "import nltk\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk.stem import WordNetLemmatizer\n",
-    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer, HashingVectorizer\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "from utils import *\n",
+    "\n",
     "InteractiveShell.ast_node_interactivity = 'all'\n",
     "pd.set_option('display.max_rows', None)\n",
     "pd.set_option('display.max_columns', None)\n",
     "pd.set_option('display.width', None)\n",
     "pd.set_option('display.max_colwidth', None)\n",
-    "np.set_printoptions(threshold = sys.maxsize)\n",
-    "\n",
-    "from utils import *"
+    "pd.set_option('display.html.use_mathjax', False)\n",
+    "np.set_printoptions(threshold = sys.maxsize)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "adc1d48e",
    "metadata": {
     "tags": []
@@ -93,7 +112,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,16 +128,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "28a714ab-6925-4991-b959-d3a4a39b6189",
-   "metadata": {},
-   "source": [
-    "# 0. Functions"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "43f5b1c1-2250-439f-898a-4a2040a90ad1",
    "metadata": {},
    "outputs": [],
@@ -140,9 +151,8 @@
     "        return len(words)\n",
     "    \n",
     "def obtain_vocab(col, max_df = 0.5, min_df = 0.001, stop_words = stop_words):\n",
-    "    \n",
     "    col = col.dropna()\n",
-    "    \n",
+    "\n",
     "    vectorizer = TfidfVectorizer(max_df = max_df,\n",
     "                                 min_df = min_df,\n",
     "                                 max_features = None,\n",
@@ -174,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4cfc6cce",
    "metadata": {},
    "outputs": [],
@@ -188,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "7be57c76",
    "metadata": {},
    "outputs": [],
@@ -200,31 +210,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "968e8360",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.insert(loc = 15,\n",
     "          column = res_col,\n",
-    "          value = df[res_raw_col].apply(lambda responses: list(map(lambda r: (r[0], r[1], r[2], clean_text(r[3])), responses))))"
+    "          value = df[res_raw_col].apply(\n",
+    "              lambda responses: list(map(\n",
+    "                  lambda r: (r[0], r[1], r[2], clean_text(r[3])), responses))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "ed633baa",
    "metadata": {},
    "outputs": [],
    "source": [
     "df['question_len'] = df[qn_raw_col].apply(num_words)\n",
     "df['response_count'] = df[res_raw_col].apply(len)\n",
-    "df['response_total_len'] = df[res_raw_col].apply(lambda x: sum(list(map(lambda y: num_words(y[3]), x))))"
+    "df['response_total_len'] = df[res_raw_col].apply(\n",
+    "    lambda responses: sum(list(map(\n",
+    "        lambda r: num_words(r[3]), responses))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b0afb047",
    "metadata": {
     "tags": []
@@ -247,7 +261,7 @@
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
+       "<table border=\"1\" class=\"dataframe tex2jax_ignore\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -370,7 +384,7 @@
        "1   True           395               2                7549  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,9 +395,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "4fde63eb-53be-4355-8faf-fb1e1aa5ab36",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -411,7 +427,7 @@
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "286a0107",
    "metadata": {},
    "outputs": [],
@@ -431,8 +447,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8fd6381c-a65d-40f8-b02d-bcb30fb7f7d3",
+   "metadata": {},
+   "source": [
+    "# 2. Double checking if we missed anything"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "5d3071fc",
    "metadata": {},
    "outputs": [
@@ -453,7 +477,7 @@
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
+       "<table border=\"1\" class=\"dataframe tex2jax_ignore\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -482,7 +506,7 @@
        "1          ab  1.504794"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -503,7 +527,7 @@
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
+       "<table border=\"1\" class=\"dataframe tex2jax_ignore\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -532,7 +556,7 @@
        "1         aaa  1.386864"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "b95c114a",
    "metadata": {
     "tags": []
@@ -575,7 +599,7 @@
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
+       "<table border=\"1\" class=\"dataframe tex2jax_ignore\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -999,7 +1023,7 @@
        "9995           sg   20.046185    2"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "0db8923b-7d5a-43cf-a13f-3f9f2c4961b3",
    "metadata": {},
    "outputs": [
@@ -1034,7 +1058,7 @@
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
+       "<table border=\"1\" class=\"dataframe tex2jax_ignore\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -1675,7 +1699,7 @@
        "11849         net   30.013227    3"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1689,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "3c943dc5-3c5c-459d-b5b8-fe3a0b70120f",
    "metadata": {
     "tags": []
@@ -1712,7 +1736,7 @@
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
+       "<table border=\"1\" class=\"dataframe tex2jax_ignore\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -1772,7 +1796,7 @@
        "10840      supply   62.657716    6"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1788,12 +1812,12 @@
    "id": "11450635-3fcc-4ef9-a5ed-98c25d167844",
    "metadata": {},
    "source": [
-    "# old stuff from gin below."
+    "# Old stuff"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "9bdc2de4",
    "metadata": {},
    "outputs": [],
@@ -1815,7 +1839,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1829,7 +1853,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
